<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_140b08"
    android:theme="@style/Theme.LoginTest"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_64dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:text="@string/login"
        android:textColor="@color/ffffff"
        android:textSize="@dimen/_22sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="@dimen/_1dp"
        app:boxStrokeWidthFocused="@dimen/_1dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_check"
        app:errorIconDrawable="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:inputType="textEmailAddress"
            android:textColor="@color/ffffff"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:hint="@string/writePassword"
        style="@style/Widget.App.TextInput"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="@dimen/_1dp"
        app:endIconMode="password_toggle"
        app:errorIconDrawable="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:inputType="textPassword"
            android:textColor="@color/ffffff"
            android:textCursorDrawable="@drawable/cursor_orange" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginVertical="@dimen/_12dp"
        android:text="@string/fogotPassword"
        android:textColor="@color/ff8a3d"
        android:textSize="@dimen/_14sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:layout_marginTop="@dimen/_24dp"
        android:backgroundTint="@drawable/login_button_color"
        android:background="@drawable/login_button_background"
        android:enabled="false"
        android:text="@string/log_in"
        android:textSize="@dimen/_16sp"
        app:cornerRadius="@dimen/_12dp"
        app:rippleColor="@color/_33ffffff"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_32dp"
        android:text="@string/or"
        android:textColor="@color/ffffff"
        android:textSize="@dimen/_14sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/vkButton"
            android:layout_width="@dimen/_36dp"
            android:layout_height="@dimen/_36dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:src="@drawable/ic_vk"/>

        <ImageView
            android:id="@+id/googleButton"
            android:layout_width="@dimen/_36dp"
            android:layout_height="@dimen/_36dp"
            android:src="@drawable/ic_google"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_have_acc"
            android:textColor="@color/aaaaaa"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/ff8a3d"
            android:textSize="@dimen/_14sp" />

    </LinearLayout>

</LinearLayout>